--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ config/secrets.yml
 /.bundle
 /vendor/bundle
 /.idea
+*.DS_Store
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
